--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-
+<meta charset="UTF-8">
 </head>
 
     <title>My app</title>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <app-app>Loading...</app-app>
   </body>
 </html>
